lab4/k8s/calicoctl.yml
apiVersion: v1
kind: Pod
metadata:
  name: calicoctl
  namespace: kube-system
spec:
  nodeSelector:
    kubernetes.io/os: linux
  hostNetwork: true
  serviceAccountName: calicoctl
  containers:
    - name: calicoctl
      image: calico/ctl:master
      command:
        - /calicoctl
      args:
        - version
        - --poll=1m
