lab4/k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
  labels:
    run: frontend
spec:
  type: LoadBalancer
  ports:
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: frontend
